# CoreWar

./: .asm  .aut_lvl2  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml-old  .test.txt.swp  11  CMakeLists.txt  Makefile  README.md  asm  asm.qm  asm_main.c  aut_lvl2_lvl_3.qmp  author  auto.py  bee_gees.cor  ch_name_ch_comment_func.c  checker_main.c  comment_init.c  corewar  corewar-tests.sh  ekx.cor  ekx.s  example_text  filed  form_token.c  form_token.h  form_token_init.c  lexer.c  lexer.h  lexer_get_comment.c  lexer_get_term_arg_break.c  lexer_get_term_arg_ind.c  lexer_get_term_arg_reg.c  lexer_get_term_break.c  lexer_get_term_ch_comment.c  lexer_get_term_ch_name.c  lexer_get_term_com_cmd.c  lexer_get_term_comment.c  (+39 more)
analyser/: _analyser_change_state.c  _analyser_get_expr.c  _analyser_xtor.c  analyser.c  analyser_change_state.c  analyser_private.h  analyser_singleton_instance.c  analyser_xtor.c  analyser_xtor.h  analyser_xtor_private.h  prvt_analyser.h  prvt_analyser_change_state.c  prvt_analyser_get_expr.c  prvt_analyser_xtor.c  prvt_analyser_xtor.h  prvt_text.h  text_private.h
asm_machine/: main_asm.c
asm_machine/analyser/: analyser.c  analyser_singleton_instance.c  prvt_analyser.h  prvt_analyser_get_expr.c  prvt_analyser_xtor.c  prvt_analyser_xtor.h  prvt_text.h
asm_machine/checker/: label_checker_inclusion_of_maps.c  label_checker_private.h  label_checker_put_to_map.c
asm_machine/codegen/: codegen_add.c  codegen_bits.c  codegen_comment.c  codegen_filling.c  codegen_general.c  codegen_header_init.c  codegen_prototype.c  codegen_prototype.h  codegen_rotate_bytes.c  codegen_xtor.c  prvt_codegen.h
asm_machine/interfaces/: analyser.h  codegen.h  expr.h  expr_defines.h  label_checker.h  lexer.h  main_asm.h  op.h  parser.h  text.h  token.h  token_defines.h
asm_machine/lexer/: lexer.c  lexer_get_term_arg_dir.c  lexer_get_term_arg_reg.c  lexer_get_term_ch_comment.c  lexer_get_term_ch_name.c  lexer_get_term_com_cmd.c  (+15 more)
automata_diagrams/: .asm  .aut_lvl2_lvl3  asm.qm  aut_lvl2_lvl3.qm  aut_lvl2_lvl_3.qmp
checker/:  ̶h̶a̶s̶h̶_̶t̶a̶b̶l̶e̶_̶a̶l̶l̶o̶c̶a̶t̶e̶_̶d̶e̶l̶e̶t̶e̶.̶c̶   ̶h̶a̶s̶h̶_̶t̶a̶b̶l̶e̶_̶o̶p̶e̶r̶a̶t̶i̶o̶n̶s̶.̶c̶  Makefile  checker_main.c  hash_table_allocate_delete.c  hash_table_operations.c  label_checker.h  label_checker_inclusion_of_maps.c  label_checker_private.h  label_checker_put_to_map.c
codegen/: codegen.h  codegen_private.h  codegen_prototype.c  codegen_prototype.h  codegen_prototype1.c  prvt_codegen.h
ft_printf/: Makefile
garbage_destructor.c/: garbage_destructor.c
get_comment_testing/: tkn_get_comment.c
gliperal-checker/: cach.cor
interfaces/: analyser.h  codegen.h  constants.h  expr.h  expr_defines.h  label_checker.h  lexer.h  libinterface.h  op.h  parser.h  text.h  token.h  token_defines.h  visual.h
invalid/: oneLive.s  slider3.s
lexer/: lexer.c  lexer.h  lexer_get_term_arg_break.c  lexer_get_term_arg_dir.c  lexer_get_term_arg_ind.c  lexer_get_term_arg_reg.c  lexer_get_term_ch_comment.c  lexer_get_term_ch_name.c  lexer_get_term_com_cmd.c  lexer_get_term_comment.c  lexer_get_term_init.c  lexer_get_term_label_word_unit.c  lexer_get_term_line_feed.c  lexer_get_term_name_cmd.c  lexer_get_term_opx_multy.c  lexer_private.h  lexer_singleton_instance.c  lexer_utils_1.c  lexer_utils_2.c  lexer_utils_private.h  lexer_xtor_private.c  lexer_xtor_private.h  prvt_lexer.h  prvt_lexer_utils.h  prvt_lexer_xtor.c  prvt_lexer_xtor.h  prvt_token.h  tkn_get_name_cmd_com_cmd.c  token.c  token.h  token_defines.h  token_getters.c  token_name_init.c  token_private.h
libf/: .gitignore  Makefile  ft_get_next_line.c  ft_hash_map_dtor.c  ft_hash_map_get.c  ft_hash_map_hashcode.c  ft_hash_map_put_to_map.c  ft_hash_map_set.c  ft_hash_map_set_content.c  ft_keystr_avl_tree_traversal.c  ft_memdel.c  ft_strint_ou_flow.c  ft_vector_add.c  ft_vector_resize.c  ft_vector_traversal.c  libft.h
libft/: .gitignore  Makefile  ft_atol.c  ft_dlstfind_i.c  ft_dlstfind_ir.c  ft_error.c  ft_get_next_line.c  ft_getline.c  ft_hash_map_ctor.c  ft_hash_map_dtor.c  ft_hash_map_get.c  ft_hash_map_put_to_map.c  ft_hash_map_set.c  ft_hash_map_set_content.c  ft_imaxtostr.c  ft_itoa.c  ft_keystr_avl_tree_traversal.c  ft_lstnew.c  ft_lstpushback.c  ft_lstswap.c  ft_memcpy.c  ft_putchar_fd.c  ft_putnwcs.c  ft_putnwcs_fd.c  ft_putwcs.c  ft_putwcs_fd.c  ft_putwstr.c  ft_realloc.c  ft_realloc_safe.c  ft_str_avl_del.c  ft_str_avl_search.c  ft_str_to_intmax.c  ft_str_to_uintmax.c  ft_strint_ou_flow.c  ft_strjoin.c  ft_strnstr.c  ft_strnstr2.c  ft_strtrim.c  ft_uintmaxtostr.c  ft_vector_add.c  (+10 more)
mstygg_cmake/: CMakeLists.txt
operation_interface/: op.h
parser/: _expr_set_arg.c  _parser_change_state.c  _parser_get_token_eof.c  _parser_get_token_init.c  _parser_get_token_labw.c  _parser_get_token_line_end.c  _parser_get_token_op0_afct.c  _parser_get_token_op0_arit.c  _parser_get_token_op0_life.c  _parser_get_token_op0_load.c  _parser_get_token_op0_lodi.c  _parser_get_token_op0_logc.c  _parser_get_token_op0_stor.c  _parser_get_token_op0_stri.c  _parser_get_token_op1_arit.c  _parser_get_token_op1_load.c  _parser_get_token_op1_lodi.c  _parser_get_token_op1_logc.c  _parser_get_token_op1_stor.c  _parser_get_token_op1_stri.c  _parser_get_token_op2_arit.c  _parser_get_token_op2_lodi.c  _parser_get_token_op2_logc.c  _parser_get_token_op2_stri.c  _parser_get_token_op_afct.c  _parser_get_token_op_life.c  _parser_get_token_precode.c  _parser_xtor.c  arg_getters.c  expr.c  expr.h  expr_defines.h  expr_private.h  expr_set_arg.c  expr_set_size.c  expr_set_type.c  parser.c  parser.h  parser_change_state.c  parser_get_token_code_comment.c  (+49 more)
testing/: cmissy_t_reg_t_ind_break.c
trash/: _vm.h
valid/: 1  11  42.cor  42.s  Gagnant2.s  bee_gees.cor  bee_gees.s  bigzork.cor  bigzork.s  jumper.s  no.cor  no.s  slider2.cor  slider2.s  turtle2.cor  turtle2.s  turtle3.cor  turtle3.s  turtle4.cor  turtle4.s  turtle5.cor  turtle5.s  turtle6.cor  turtle6.s  zork.cor  zork.s  zork1.s  zork2.cor  zork2.s  zork_ld.cor  zork_ld.s
visual/: _visual_private.h  visual.c
visualisation/: visual.c  visual.h
vm-champ-linux/: op.c  op.h
(+469 files in other folders)
